tests/ui/aggregate_types/fail/stddev_pop_requires_postgres.stderr
error[E0277]: no statistical aggregate policy for `drizzle::sqlite::types::Integer` on this dialect
 --> tests/ui/aggregate_types/fail/stddev_pop_requires_postgres.rs:5:24
  |
5 |     let _ = stddev_pop(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1"));
  |             ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ stddev/variance result type is not defined for this SQL type/dialect
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `StatisticalAggregatePolicy<SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Integer`
  = help: the following other types implement trait `StatisticalAggregatePolicy<D>`:
            Float4
            Float8
            Int2
            Int4
            Int8
            drizzle::ddl::postgres::types::Numeric
note: required by a bound in `stddev_pop`
 --> core/src/expr/agg.rs
  |
  | pub fn stddev_pop<'a, V, E>(
  |        ---------- required by a bound in this function
...
  |     E::SQLType: StatisticalAggregatePolicy<V::DialectMarker>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `stddev_pop`

error[E0277]: no statistical aggregate policy for `drizzle::sqlite::types::Integer` on this dialect
 --> tests/ui/aggregate_types/fail/stddev_pop_requires_postgres.rs:5:13
  |
5 |     let _ = stddev_pop(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ stddev/variance result type is not defined for this SQL type/dialect
  |
  = help: the trait `StatisticalAggregatePolicy<SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Integer`
  = help: the following other types implement trait `StatisticalAggregatePolicy<D>`:
            Float4
            Float8
            Int2
            Int4
            Int8
            drizzle::ddl::postgres::types::Numeric
